--- a/views/the_root_of_all_evil.haml
+++ b/views/the_root_of_all_evil.haml
@@ -1,5 +1,9 @@
 -# coding: utf-8
- 
+
+%head
+	%script{:type => "text/javascript", :src => "/assets/javascripts/comp-pool.js"}
+	%link{:type => "text/css", :rel => "stylesheet", :href => "/assets/stylesheets/comp-pool.css"}
+
 #header
 	#logo
 	#search-engine
