--- a/views/the_root_of_all_evil.haml
+++ b/views/the_root_of_all_evil.haml
@@ -6,8 +6,17 @@
 
 #header
 	#logo
-	#search-engine
+		A cool logo TBD
 
 #left-threads
-
+	#search-engine
+		%h3 Topics:
+		%input{:type => :text, :value => "Here there be a list of tags, to filter threads"}
+	%ul
+		%li Post cats
+		%li Install gentoo
+		%li Have you seen KLK guise
+		
 #body
+	%h1 Welcome to comp-pool
+	%h2 Have wonderful conversations while we use your computer!
