--- a/views/the_root_of_all_evil.haml
+++ b/views/the_root_of_all_evil.haml
@@ -4,19 +4,20 @@
 	%script{:type => "text/javascript", :src => "/javascripts/comp-pool.js"}
 	%link{:type => "text/css", :rel => "stylesheet", :href => "/stylesheets/comp-pool.css"}
 
-#header
-	#logo
-		A cool logo TBD
-
-#left-threads
-	#search-engine
-		%h3 Topics:
-		%input{:type => :text, :value => "Here there be a list of tags, to filter threads"}
-	%ul
-		%li Post cats
-		%li Install gentoo
-		%li Have you seen KLK guise
-		
-#body
-	%h1 Welcome to comp-pool
-	%h2 Have wonderful conversations while we use your computer!
+%body
+	#header
+		#logo
+			A cool logo TBD
+	
+	#left-threads
+		#search-engine
+			%h3 Topics:
+			%input{:type => :text, :value => "Here there be a list of tags, to filter threads"}
+		%ul
+			%li Post cats
+			%li Install gentoo
+			%li Have you seen KLK guise
+			
+	#body
+		%h1 Welcome to comp-pool
+		%h2 Have wonderful conversations while we use your computer!
