--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
 		});
 	</script>
 </head>
-<body ng-app="MyApp" style="background-image: url('http://setedous.com/wp-content/uploads/2014/09/Pórtico-Astano-2.jpg')">
+<body ng-app="MyApp" style="background-image: url('http://setedous.com/wp-content/uploads/2014/09/Pórtico-Astano-2.jpg');background-size:100%;">
 	<div ng-controller="JobsCtrl">
 		<div>
 			Getting job {{job.name}}: It {{job.metadata.description.en}}
