--- a/views/index.html
+++ b/views/index.html
@@ -5,34 +5,111 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <script type="text/javascript">
+		function pickRandomProperty(obj) {
+		    var result;
+		    var count = 0;
+		    for (var prop in obj)
+			if (Math.random() < 1/++count)
+			  result = prop;
+		    return result;
+		};
+		
+		function millisecondsToStr (milliseconds) {
+		    // TIP: to find current time in milliseconds, use:
+		    // var  current_time_milliseconds = new Date().getTime();
+
+		    function numberEnding (number) {
+			return (number > 1) ? 's' : '';
+		    }
+
+		    var temp = Math.floor(milliseconds / 1000);
+		    var years = Math.floor(temp / 31536000);
+		    if (years) {
+			return years + ' year' + numberEnding(years);
+		    }
+		    //TODO: Months! Maybe weeks? 
+		    var days = Math.floor((temp %= 31536000) / 86400);
+		    if (days) {
+			return days + ' day' + numberEnding(days);
+		    }
+		    var hours = Math.floor((temp %= 86400) / 3600);
+		    if (hours) {
+			return hours + ' hour' + numberEnding(hours);
+		    }
+		    var minutes = Math.floor((temp %= 3600) / 60);
+		    if (minutes) {
+			return minutes + ' minute' + numberEnding(minutes);
+		    }
+		    var seconds = temp % 60;
+		    if (seconds) {
+			return seconds + ' second' + numberEnding(seconds);
+		    }
+		    return 'less than a second'; //'just now' //or other string you like;
+		}
+		
 		var app = angular.module("MyApp", []);
 
 		app.controller("JobsCtrl", function($scope, $http) {
-		    $scope.variables = [];
-  			$http.get('./jobs/hash-of-hashes').
-    		then(function(data) {
-	      		$scope.job = data.data;
-	      			
-	  			return $http.get('./jobs/hash-of-hashes/variables/1')
-    		}).then(function(data) {
-    			$scope.variables.push(data.data);
-    		}).then(function() {
+		  $scope.variables = [];
+		  
+		  // HAL (HATEOAS) traversal
+		  // It's long, so true apps should avoid doing this by hand and try to use a HAL traversal helper
+		  // from jobs API ROOT
+		  console.log("IN JOBS ROOT");
+		  $http.get('/jobs').then(function(data) {
+			// GET A RANDOM JOB LINK
+			console.log("GOT JOBS LINKS");
+			var href = data.data._links;
+			delete href.self;
+			href = href[pickRandomProperty(href)].href;
+	  		return $http.get(href);
+		  }).then(function(data) {
+			// GET A JOB OBJECT
+			console.log("GOT A JOB");
+			$scope.job = data.data;
+			
+			// GET THE VARIABLES LINK
+			var href = data.data._links;
+			href = href['variables'].href;
+	  		return $http.get(href);
+		  }).then(function(data) {
+			console.log("GOT VARIABLES LINKS");
+			var href = data.data._links;
+			delete href.self;
+			href = href[pickRandomProperty(href)].href;
+	      		
+	  		return $http.get(href);
+		  }).then(function(data) {
+			console.log("GOT A VARIABLE");
+    			$scope.variables.push(data.data.variable);
+		  }).then(function() {
+			console.log("COMPUTING STUFF");
     			var funct = $scope.job.execute_function;
     			$scope.funct = new Function("variable, context", funct);
     			$scope.variables[$scope.variables.length - 1]
     				.result = $scope.funct.call(null, $scope.variables[$scope.variables.length - 1], {}).toString(16);
-    		}).then(function() {
+		  }).then(function() {
+			var starttime=(new Date()).getTime();
+			console.log(starttime);
+			var local_vars = $scope.variables;
     			for (var i = 0; i < 1000; i++) {
-	    			var result = $scope.variables[$scope.variables.length - 1].result;
-	    			$scope.variables.push({hash: result});
-	    			$scope.variables[$scope.variables.length - 1]
-	    				.result = $scope.funct.call(null, $scope.variables[$scope.variables.length - 1], {}).toString(16);
+	    			var result = local_vars[local_vars.length - 1].result;
+	    			local_vars.push({hash: result});
+	    			local_vars[local_vars.length - 1].result = $scope.funct.call(null, local_vars[local_vars.length - 1], {}).toString(16);
 	    		}
+	    		var endtime = (new Date()).getTime();
+	    		console.log(endtime);
+	    		var comptime = endtime - starttime;
+	    		console.log(comptime);
+	    		$scope.time = millisecondsToStr(comptime);
+	    		
+	    		$scope.variables = local_vars;
     		});;
 		});
 	</script>
@@ -57,6 +134,7 @@
 		<div class="panel-heading">
 			<h3 class="panel-title">Computing jobs</h3>
 		</div>
+		<div ng-show="time != null">Computation lasted {{time}}</div>
 		<div class="panel-body text-center">
 			<div>{{job.name}}: {{job.metadata.description.en}}</div>
 			<div ng-repeat="variable in variables">
