--- a/views/index.html
+++ b/views/index.html
@@ -92,25 +92,8 @@
 			console.log("COMPUTING STUFF");
     			var funct = $scope.job.execute_function;
     			$scope.funct = new Function("variable, context", funct);
-    			$scope.variables[$scope.variables.length - 1]
-    				.result = $scope.funct.call(null, $scope.variables[$scope.variables.length - 1], {}).toString(16);
-		  }).then(function() {
-			var starttime=(new Date()).getTime();
-			console.log(starttime);
-			var local_vars = $scope.variables;
-    			for (var i = 0; i < 1000; i++) {
-	    			var result = local_vars[local_vars.length - 1].result;
-	    			local_vars.push({hash: result});
-	    			local_vars[local_vars.length - 1].result = $scope.funct.call(null, local_vars[local_vars.length - 1], {}).toString(16);
-	    		}
-	    		var endtime = (new Date()).getTime();
-	    		console.log(endtime);
-	    		var comptime = endtime - starttime;
-	    		console.log(comptime);
-	    		$scope.time = millisecondsToStr(comptime);
-	    		
-	    		$scope.variables = local_vars;
-    		});;
+    			$scope.result = $scope.funct.call(null, $scope.variable, {}).toString(16);
+		  })
 		});
 	</script>
 <style>
@@ -123,25 +106,33 @@
 .title-colored {
 	color: #0B1B42;
 }
+.no-padding-right {
+   padding-right: 0 !important;
+}
+.no-padding-bottom {
+   padding-bottom: 0 !important;
+}
+.no-margin-bottom {
+   margin-bottom: 0 !important;
+}
+.extend-to-bottom {
+   height: 97%;
+}
 </style>
 </head>
-<body class="background-astano">
-	<div class="row container">
-		<h1 class="title-colored">Semprebeta</h1>
-	</div>
-	<div class="panel panel-default col-md-3 col-md-offset-1"
-		ng-app="MyApp" ng-controller="JobsCtrl">
-		<div class="panel-heading">
-			<h3 class="panel-title">Computing jobs</h3>
+<body class="background-astano extend-to-bottom no-margin-bottom no-padding-bottom">
+	<nav class="navbar navbar-default navbar-collapse no-margin-bottom" role="navigation">
+		<span class="navbar-brand navbar-left ">Semprebeta</a>
+		<div class="navbar-header">         
+  		</div>
+
+		<div class="collapse navbar-collapse">
+			<!-- snip -->
 		</div>
-		<div ng-show="time != null">Computation lasted {{time}}</div>
-		<div class="panel-body text-center">
-			<div>{{job.name}}: {{job.metadata.description.en}}</div>
-			<div ng-repeat="variable in variables">
-				<span class="col-md-5"> {{variable.hash}} </span> 
-				<span class="col-md-2"> -> </span> 
-				<span class="col-md-5"> {{variable.result}} </span>
-			</div>
+	</nav>
+	<div class="col-md-2 pull-right text-right no-padding-right extend-to-bottom no-margin-bottom">
+		<div class="sidebar-nav list-group">
+			<div class="sidebar-brand list-group-item extend-to-bottom no-margin-bottom">PAco</div>
 		</div>
 	</div>
 </body>
