--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class="extend-to-bottom">
 <head>
 <title>Compool root</title>
 <meta charset="UTF-8">
@@ -53,9 +53,9 @@
 		    return 'less than a second'; //'just now' //or other string you like;
 		}
 		
-		var app = angular.module("MyApp", []);
+		var app = angular.module("SemprebetaApp", []);
 
-		app.controller("JobsCtrl", function($scope, $http) {
+		app.controller("JobsCtrl", function($scope, $http, $interval) {
 		  $scope.variables = [];
 		  
 		  // HAL (HATEOAS) traversal
@@ -87,13 +87,18 @@
 	  		return $http.get(href);
 		  }).then(function(data) {
 			console.log("GOT A VARIABLE");
-    			$scope.variables.push(data.data.variable);
+    			$scope.variable = data.data.variable;
 		  }).then(function() {
 			console.log("COMPUTING STUFF");
     			var funct = $scope.job.execute_function;
     			$scope.funct = new Function("variable, context", funct);
-    			$scope.result = $scope.funct.call(null, $scope.variable, {}).toString(16);
-		  })
+			$interval(function() {
+				console.log("Compute a new result");
+    				$scope.result = $scope.funct.call(null, $scope.variable, {}).toString(16);
+				$scope.variable.hash = $scope.result;
+				$scope.result_count = ($scope.result_count || 0) + 1;
+			}, 100);
+		  });
 		});
 	</script>
 <style>
@@ -109,31 +114,21 @@
 .no-padding-right {
    padding-right: 0 !important;
 }
-.no-padding-bottom {
-   padding-bottom: 0 !important;
-}
-.no-margin-bottom {
-   margin-bottom: 0 !important;
-}
 .extend-to-bottom {
-   height: 97%;
+   height: 100%;
 }
 </style>
 </head>
-<body class="background-astano extend-to-bottom no-margin-bottom no-padding-bottom">
-	<nav class="navbar navbar-default navbar-collapse no-margin-bottom" role="navigation">
-		<span class="navbar-brand navbar-left ">Semprebeta</a>
-		<div class="navbar-header">         
-  		</div>
-
-		<div class="collapse navbar-collapse">
-			<!-- snip -->
+<body class="background-astano extend-to-bottom">
+	<nav class="navbar navbar-default navbar-collapse" role="navigation">
+		<span class="navbar-brand navbar-left ">Semprebeta {punto} Gal</a>
+	</nav>
+	<nav class="navbar navbar-default navbar-collapse navbar-fixed-bottom" ng-app="SemprebetaApp" ng-controller="JobsCtrl">
+		<div class="list-group-item container">
+			<div class="sidebar-brand col-md-4">You're helping people compute stuff, see:</div>
+			<div class="col-md-4">{{result | json}}</div>
+			<div class="col-md-4" ng-show="result_count != null">Got {{result_count}} results</div>
 		</div>
 	</nav>
-	<div class="col-md-2 pull-right text-right no-padding-right extend-to-bottom no-margin-bottom">
-		<div class="sidebar-nav list-group">
-			<div class="sidebar-brand list-group-item extend-to-bottom no-margin-bottom">PAco</div>
-		</div>
-	</div>
 </body>
 </html>
