--- a/views/index.html
+++ b/views/index.html
@@ -51,60 +51,100 @@
 			return seconds + ' second' + numberEnding(seconds);
 		    }
 		    return 'less than a second'; //'just now' //or other string you like;
-		}
+		};
+		
+		var selectRandomLink = function(hal_object) {
+			console.log("Getting link from %s", Object.keys(hal_object.data._links).length);
+			var href = hal_object.data._links;
+			delete href.self;
+			href = href[pickRandomProperty(href)].href;
+			
+			console.log("Return link %s", href);
+			
+			return href;
+		};
 		
 		var app = angular.module("SemprebetaApp", []);
 
 		app.controller("JobsCtrl", function($scope, $http, $interval) {
-		  $scope.variables = [];
+		  // GET A RANDOM JOB LINK
+		  $scope.getARandomJobLink = function(data_from_jobs_root) {
+			console.log("GOT JOBS LINKS");
+	  		return $http.get(selectRandomLink(data_from_jobs_root));
+		  };
 		  
+		  // GET A JOB OBJECT
+		  $scope.getAJob = function(data_from_job_link) {
+			console.log("GOT A JOB");
+			$scope.job = data_from_job_link.data;
+			
+			// GET THE VARIABLES LINK
+			var href = data_from_job_link.data._links;
+			href = href['variables'].href;
+			
+			$scope.variablesBaseUri = href;
+			
+	  		return $http.get(href);
+		  };
+		  
+		  $scope.getARandomVariableLink = function(data_from_job_variables_root) {
+			console.log("GOT VARIABLES LINKS");
+	  		return $http.get(selectRandomLink(data_from_job_variables_root));
+		  };
+		  
+		  $scope.setupAndCompute = function(data) {
+			console.log("GOT A VARIABLE");
+    		$scope.variable = data.data.variable;
+    		
+			console.log("GOT A FUNCTION OBJECT");
+			var funct = $scope.job.execute_function;
+			$scope.funct = new Function("variable, context", funct);
+			
+			console.log("Compute a new result");
+			$scope.result = $scope.funct.call(null, $scope.variable, {}).toString(16);
+			$scope.variable.hash = $scope.result;
+			$scope.result_count = ($scope.result_count || 0) + 1;
+			$scope.in_time = ((new Date()).getTime() - $scope.startTime) / 1000;
+			$scope.results_per_second = $scope.result_count / $scope.in_time;
+			
+			$http({
+		      method: 'POST',
+		      url: $scope.variablesBaseUri,
+		      data: $scope.variable,
+		      headers: {'Content-Type': 'application/json'}
+		    });
+		  };
+		  
+		  /////////////////////////////////////////////////////////////////
+		  // DO actual Job
 		  // HAL (HATEOAS) traversal
 		  // It's long, so true apps should avoid doing this by hand and try to use a HAL traversal helper
 		  // from jobs API ROOT
+		  //////////////////////////////////////////////////////////////////
+		  $scope.startTime = (new Date()).getTime();
+		  $scope.results_per_second = 0;
+		  
 		  console.log("IN JOBS ROOT");
-		  $http.get('/jobs').then(function(data) {
-			// GET A RANDOM JOB LINK
-			console.log("GOT JOBS LINKS");
-			var href = data.data._links;
-			delete href.self;
-			href = href[pickRandomProperty(href)].href;
-	  		return $http.get(href);
-		  }).then(function(data) {
-			// GET A JOB OBJECT
-			console.log("GOT A JOB");
-			$scope.job = data.data;
-			
-			// GET THE VARIABLES LINK
-			var href = data.data._links;
-			href = href['variables'].href;
-	  		return $http.get(href);
-		  }).then(function(data) {
-			console.log("GOT VARIABLES LINKS");
-			var href = data.data._links;
-			delete href.self;
-			href = href[pickRandomProperty(href)].href;
-	      		
-	  		return $http.get(href);
-		  }).then(function(data) {
-			console.log("GOT A VARIABLE");
-    			$scope.variable = data.data.variable;
-		  }).then(function() {
-			console.log("COMPUTING STUFF");
-    			var funct = $scope.job.execute_function;
-    			$scope.funct = new Function("variable, context", funct);
-			$interval(function() {
-				console.log("Compute a new result");
-    				$scope.result = $scope.funct.call(null, $scope.variable, {}).toString(16);
-				$scope.variable.hash = $scope.result;
-				$scope.result_count = ($scope.result_count || 0) + 1;
-			}, 100);
-		  });
+		  $http.get('/jobs')
+		  .then($scope.getARandomJobLink)
+		  .then($scope.getAJob)
+		  .then($scope.getARandomVariableLink)
+		  .then($scope.setupAndCompute);
+		  
+		  
+		  $interval(function (){
+		  	$http.get($scope.variablesBaseUri)
+		  	.then($scope.getARandomVariableLink)
+		  	.then($scope.setupAndCompute);
+		  }, 500);
 		});
 	</script>
 <style>
 .background-astano {
-	background-image:
-		url('http://setedous.com/wp-content/uploads/2014/09/Pórtico-Astano-2.jpg');
+	background-image: url('http://setedous.com/wp-content/uploads/2014/09/Pórtico-Astano-2.jpg'); 
+	background-position: top right;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-size: 100%;
 }
 
@@ -121,13 +161,13 @@
 </head>
 <body class="background-astano extend-to-bottom">
 	<nav class="navbar navbar-default navbar-collapse" role="navigation">
-		<span class="navbar-brand navbar-left ">Semprebeta {punto} Gal</a>
+		<span class="navbar-brand navbar-left ">semprebeta {punto} gal</span>
 	</nav>
 	<nav class="navbar navbar-default navbar-collapse navbar-fixed-bottom" ng-app="SemprebetaApp" ng-controller="JobsCtrl">
 		<div class="list-group-item container">
-			<div class="sidebar-brand col-md-4">You're helping people compute stuff, see:</div>
-			<div class="col-md-4">{{result | json}}</div>
-			<div class="col-md-4" ng-show="result_count != null">Got {{result_count}} results</div>
+			<div class="sidebar-brand col-md-4">You're helping people using your computer, see:</div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4 text-center" ng-show="result_count != null">Got {{result_count}} results ({{results_per_second | number:2}} r/s in {{in_time | number:3}} seconds)</div>
 		</div>
 	</nav>
 </body>
